kube-4/nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: boiarnikov-a-hw6
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
