kube-4/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: boiarnikov-a-hw6
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - boiarnikov-a-hw6.mfti.devops-teta.ru
    secretName: tls-cert-le
  rules:
  - host: boiarnikov-a-hw6.mfti.devops-teta.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
